--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root {
     --branco: white;
     --cor-de-fundo: #2e000e;
-    --fundo-senha: #00244D;
+    --fundo-senha: #4d0043;
     --fundo-texto: #001E40;
     --borda: #0075FF;
     --roboto: 'Roboto', sans-serif;
