--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --branco: white;
     --cor-de-fundo: #2e000e;
     --fundo-senha: #4d0043;
-    --fundo-texto: #001E40;
+    --fundo-texto: #400040;
     --borda: #0075FF;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
