--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --cor-de-fundo: #2e000e;
     --fundo-senha: #4d0043;
     --fundo-texto: #400040;
-    --borda: #8c00ff;
+    --borda: #ff00ff;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
 }
