--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ label {
 
 .fraca {
     width: 25%;
-    background-color: #E71B32;
+    background-color: #db0c24;
 }
 
 .media {
@@ -141,7 +141,7 @@ label {
 }
 
 .forte {
-    background-color: #00FF85;
+    background-color: #00ff95;
     width: 100%;
 }
 
